--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 # Serverless directories
 .serverless
-
-# golang output binary directory
 bin
-
-# golang vendor (dependencies) directory
 vendor
 
 # Binaries for programs and plugins
@@ -16,6 +12,7 @@ vendor
 
 # Test binary, build with `go test -c`
 *.test
+go.work
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
